<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_marginTop="35dp"
        android:id="@+id/iv_avatar"
        android:src="@mipmap/icon_circle_home"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:civ_border_width="1dp"/>

    <EditText
        android:id="@+id/et_input_role"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_et"
        android:hint="@string/please_input"
        android:paddingTop="@dimen/et_padding_top"
        android:paddingBottom="@dimen/et_padding_bottom"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ADUnitID_Banner">
    </com.google.android.gms.ads.AdView>

    <TextView
        android:id="@+id/tv_query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_btn"
        android:text="@string/query"
        android:textColor="@color/text_sel_color"
        android:gravity="center"
        android:paddingTop="@dimen/btn_padding_top"
        android:paddingBottom="@dimen/btn_padding_bottom"
        android:textSize="@dimen/text_size"
        />





</LinearLayout>
